noticed the calendar switch months a bit early when working on 4-30, determined it was due to the time being based in UTC so I made a fix; moved the detailView component to a different spot in the html so that the form could be opened while still viewing the details, but also still keep the rest of the calendar covered

--- a/src/style/adminTools.css
+++ b/src/style/adminTools.css
@@ -6,7 +6,9 @@
   margin: 0 auto;
   height: 100%;
   width: 100%;
-  overflow-y: scroll;
+  overflow-y: auto;
+  overflow-x: hidden;
+  box-sizing: border-box;
 }
 
 .tool {
