--- a/src/style/calendar.css
+++ b/src/style/calendar.css
@@ -85,9 +85,8 @@
 /* styles for the unassigned joblist, which is in the same place as the job form */
 
 .unassigned-joblist {
-  width: 20vw;
   height: 100%;
-  min-width: 15rem;
+  width: 300px;
   display: flex;
   flex-flow: column nowrap;
   align-items: center;
@@ -96,7 +95,9 @@
   border: 1px rgb(175, 175, 175) solid;
   padding: .75rem 5px;
 
-  overflow: scroll;
+  overflow-y: auto; /* Use auto to show scrollbars only when necessary */
+  overflow-x: hidden; /* Prevent horizontal scrolling */
+  box-sizing: border-box; /* Include padding and border in width/height calculations */
 }
 
 .unassigned-job {
@@ -138,6 +139,7 @@
 
 .calendar-form {
   box-shadow: 2px 1px 5px 1px rgba(0, 0, 0, 0.4);
+  background-color: rgb(205, 205, 205);
 }
 
 .calendar {
@@ -261,10 +263,9 @@
   position: absolute;
   top: 0;
   left: 0;
-  width: 100%;
   height: 100%;
   background-color: rgba(100, 100, 100, 0.75);
-  z-index: 499;
+  z-index: 200;
 }
 
 .detail-box {
@@ -278,7 +279,7 @@
   min-height: 2rem;
   width: 50%;
   min-height: 40%;
-  z-index: 500;
+  z-index: 250;
 
   background-color: rgb(205, 205, 205);
 }
